--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,26 @@
 .lat-button {
-    display: none;
+  display: none;
 }
 .lon-button {
-    display: none;
+  display: none;
 }
 
 .row-block {
-    display: block;
+  display: block;
+}
+
+ul {
+  list-style: none;
+  padding-left: 0;
+}
+.city-button {
+  width: 100%;
+  padding: 5px;
+  text-align: center;
+  background-color: #eee;
+  border: 1px solid #ccc;
+  margin: 0 0 4px;
+}
+li {
+  text-decoration: none;
 }
